# dict-from-pypinyin

./: CHANGELOG.md  CITATION.cff  MANIFEST.in  Pipfile  README.md  pyproject.toml
res/: hanzi-syllables.txt
src/dict_from_pypinyin/: __init__.py  api.py  argparse_helper.py  cli.py  core.py  ipa2symb.py  main.py  transcription.py
src/dict_from_pypinyin_tests/core_py/: test_convert_chinese_to_pinyin.py
src/dict_from_pypinyin_tests/transcription_py/: test_word_to_pinyin.py
