[project]
name = "dict-from-pypinyin"
version = "0.0.2"
description = "Command-line interface (CLI) to create a pronunciation dictionary by looking up pinyin transcriptions using pypinyin including the possibility of ignoring punctuation and splitting words on hyphens before transcribing them."
readme = "README.md"
requires-python = ">=3.8, <3.13"
license = {text = "MIT"}
authors = [
  {email = "pypi@stefantaubert.com"},
  {name = "Stefan Taubert"}
]
maintainers = [
  {email = "pypi@stefantaubert.com"},
  {name = "Stefan Taubert"}
]
keywords = [
  "Pronunciation",
  "Dictionary",
  "Chinese",
  "Language",
  "Pinyin",
  "Speech Synthesis",
  "TTS",
  "Linguistics"
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Operating System :: OS Independent",
  "Operating System :: MacOS",
  "Operating System :: POSIX",
  "Operating System :: POSIX :: BSD",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Unix",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
]
dependencies = [
  "pronunciation-dictionary >= 0.0.6",
  "word-to-pronunciation >= 0.0.1",
  "ordered-set >= 4.1.0",
  "pypinyin >=0.50, < 0.51",
  "tqdm"
]

[project.urls]
Homepage = "https://github.com/stefantaubert/dict-from-pypinyin"
Issues = "https://github.com/stefantaubert/dict-from-pypinyin/issues"

[project.scripts]
dict-from-pypinyin-cli = "dict_from_pypinyin.cli:run_prod"

[tool.setuptools.packages.find]
where = ["src"]
include = [
  "dict_from_pypinyin",
  "dict_from_pypinyin_tests",
  "dict_from_pypinyin_tests.*"
]
exclude = [
  "dict_from_pypinyin_debug"
]
namespaces = true

[tool.pytest.ini_options]
log_cli = true
log_level = "DEBUG"
testpaths = [
  "src/dict_from_pypinyin_tests",
]

[tool.autopep8]
indent-size = 2
ignore = ["E121"]
max_line_length = 100

[tool.isort]
line_length = 100
indent = 2
known_first_party = [
  "dict_from_pypinyin",
]
known_third_party = [
  "pronunciation_dictionary",
  "ordered_set",
  "word_to_pronunciation",
  "pypinyin",
  "tqdm"
]

[tool.pyright]
root = ["src"]
include = ["src"]
pythonPlatform = "All"
typeCheckingMode = "off"
stubPath = ""
exclude = [
  "**/node_modules",
  "**/__pycache__",
  ".git",
  "**/*.egg-info",
  "**/*_debug",
]
useLibraryCodeForTypes = true

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py{38,39,310,311,312}
isolated_build = true

[testenv]
deps = 
  pytest
commands = 
  pytest
  dict-from-pypinyin-cli
  dict-from-pypinyin-cli -v
"""

[build-system]
requires = [
  "setuptools >= 40.9.0",
  "wheel",
]
build-backend = "setuptools.build_meta"
